# mfoci

./: .coverage  .gitignore  NN_copula_estimate.R  NN_copula_estimate_mult_CI.R  NN_feature_selection.R  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  mfoci.factors.rst  mfoci.helpers.rst  mfoci.methods.rst  mfoci.response_vars.rst  mfoci.rst  modules.rst
mfoci/: __init__.py
mfoci/factors/: esg_factors.py  fama_french.py
mfoci/helpers/: filterer.py
mfoci/methods/: __init__.py  foci.R  foci.py  foci2.R  kfoci.R  kfoci.py  lasso.py  mfoci_func.py  multivar_chatterjee.py
mfoci/response_vars/: etf_vars.py  stock_return_vars.py  volatility_vars.py
tests/helpers/: test_filterer.py
tests/methods/: test_foci.py
