[tool.poetry]
name = "mfoci"
version = "0.1.6"
description = ""
authors = ["Marcus Rockel <corram@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# stock_loader = {path = "../../finadvisor/stock-loader", develop = true}
# eikon_api_wrapper = {path = "../../eikon_api_wrapper", develop = true}
numpy = "^2.0"
pandas = "^2.2"
pandas-datareader = "^0.10"
scikit-learn = "^1.4"
matplotlib = "^3.8"
statsmodels = "^0.14"
jinja2 = "^3.1"
yfinance = "^0.2"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.4"
sphinx-rtd-theme = "^2.0.0"
black = "^24.8.0"
setuptools = "^72.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
