[tool.poetry]
name = "mfoci"
version = "0.1.6"
description = ""
authors = ["Marcus Rockel <corram@outlook.de>"]
readme = "README.md"
homepage = "https://github.com/Corrram/mfoci"
documentation = "https://mfoci.readthedocs.io"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Corrram/mfoci/issues"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0"
pandas = "^2.2"
pandas-datareader = "^0.10"
scikit-learn = "^1.4"
matplotlib = "^3.9"
statsmodels = "^0.14"
jinja2 = "^3.1"
yfinance = "^0.2"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
copul = "^0.0.10"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-pycharm = "^0.7.0"
setuptools = "^72.1.0"
sphinx = "^7.4"
sphinx-rtd-theme = "^2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
